--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Retrieve Aircraft Position Report</title>
+
 </head>
 <body>
     <p><a href="/aircraft">Click Here</a>
-        to retrieve current aircraft position in range of retriever
-    </p>
+        to retrieve current aircraft position in range of retriever.</p>
 </body>
 </html>
